@@ -16,8 +16,11 @@
  */
 package org.apache.calcite.util;
 
+import com.google.common.io.CharSource;
+
+import org.checkerframework.checker.nullness.qual.Nullable;
+
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -27,9 +30,13 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Objects;
+import java.util.Locale;
+import java.util.Optional;
 import java.util.zip.GZIPInputStream;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * Utilities for {@link Source}.
@@ -45,7 +52,8 @@ public abstract class Sources {
     return new FileSource(url);
   }
 
-  public static Source file(File baseDirectory, String fileName) {
+
+  public static Source file(@Nullable File baseDirectory, String fileName) {
     final File file = new File(fileName);
     if (baseDirectory != null && !file.isAbsolute()) {
       return of(new File(baseDirectory, fileName));
@@ -54,9 +62,28 @@ public abstract class Sources {
     }
   }
 
+  /** Creates a {@link Source} from a character sequence such as a
+   * {@link String}. */
+  public static Source of(CharSequence s) {
+    return fromCharSource(CharSource.wrap(s));
+  }
+
+  /** Creates a {@link Source} from a generic text source such as string,
+   * {@link java.nio.CharBuffer} or text file. Useful when data is already
+   * in memory or can't be directly read from
+   * a file or url.
+   *
+   * @param source generic "re-readable" source of characters
+   * @return {@code Source} delegate for {@code CharSource} (can't be null)
+   * @throws NullPointerException when {@code source} is null
+   */
+  public static Source fromCharSource(CharSource source) {
+    return new GuavaCharSource(source);
+  }
+
   public static Source url(String url) {
     try {
-      return of(new URL(url));
+      return of(URI.create(url).toURL());
     } catch (MalformedURLException | IllegalArgumentException e) {
       throw new RuntimeException("Malformed URL: '" + url + "'", e);
     }
@@ -65,7 +92,7 @@ public abstract class Sources {
   /** Looks for a suffix on a path and returns
    * either the path with the suffix removed
    * or null. */
-  private static String trimOrNull(String s, String suffix) {
+  private static @Nullable String trimOrNull(String s, String suffix) {
     return s.endsWith(suffix)
         ? s.substring(0, s.length() - suffix.length())
         : null;
@@ -75,22 +102,96 @@ public abstract class Sources {
     return source.protocol().equals("file");
   }
 
-  /** Implementation of {@link Source}. */
+  /** Adapter for {@link CharSource}. */
+  private static class GuavaCharSource implements Source {
+    private final CharSource charSource;
+
+    private GuavaCharSource(CharSource charSource) {
+      this.charSource = requireNonNull(charSource, "charSource");
+    }
+
+    private UnsupportedOperationException unsupported() {
+      return new UnsupportedOperationException(
+          String.format(Locale.ROOT, "Invalid operation for '%s' protocol", protocol()));
+    }
+
+    @Override public URL url() {
+      throw unsupported();
+    }
+
+    @Override public File file() {
+      throw unsupported();
+    }
+
+    @Override public Optional<File> fileOpt() {
+      return Optional.empty();
+    }
+
+    @Override public String path() {
+      throw unsupported();
+    }
+
+    @Override public Reader reader() throws IOException {
+      return charSource.openStream();
+    }
+
+    @Override public InputStream openStream() throws IOException {
+      return charSource.asByteSource(StandardCharsets.UTF_8).openStream();
+    }
+
+    @Override public String protocol() {
+      return "memory";
+    }
+
+    @Override public Source trim(final String suffix) {
+      throw unsupported();
+    }
+
+    @Override public @Nullable Source trimOrNull(final String suffix) {
+      throw unsupported();
+    }
+
+    @Override public Source append(final Source child) {
+      throw unsupported();
+    }
+
+    @Override public Source relative(final Source source) {
+      throw unsupported();
+    }
+
+    @Override public String toString() {
+      return getClass().getSimpleName() + "{" + protocol() + "}";
+    }
+  }
+
+  /** Implementation of {@link Source} on the top of a {@link File} or
+   * {@link URL}. */
   private static class FileSource implements Source {
-    private final File file;
+    private final @Nullable File file;
     private final URL url;
 
+    /**
+     * A flag indicating if the url is deduced from the file object.
+     */
+    private final boolean urlGenerated;
+
     private FileSource(URL url) {
-      this.url = Objects.requireNonNull(url);
+      this.url = requireNonNull(url, "url");
       this.file = urlToFile(url);
+      this.urlGenerated = false;
     }
 
     private FileSource(File file) {
-      this.file = Objects.requireNonNull(file);
-      this.url = null;
+      this.file = requireNonNull(file, "file");
+      this.url = fileToUrl(file);
+      this.urlGenerated = true;
     }
 
-    private File urlToFile(URL url) {
+    private File fileNonNull() {
+      return requireNonNull(file, "file");
+    }
+
+    private static @Nullable File urlToFile(URL url) {
       if (!"file".equals(url.getProtocol())) {
         return null;
       }
@@ -109,29 +210,61 @@ public abstract class Sources {
       return Paths.get(uri).toFile();
     }
 
-    @Override public String toString() {
-      return (url != null ? url : file).toString();
+    private static URL fileToUrl(File file) {
+      String filePath = file.getPath();
+      if (!file.isAbsolute()) {
+        // convert relative file paths
+        filePath = filePath.replace(File.separatorChar, '/');
+        if (file.isDirectory() && !filePath.endsWith("/")) {
+          filePath += "/";
+        }
+        try {
+          // We need to encode path. For instance, " " should become "%20"
+          // That is why java.net.URLEncoder.encode(java.lang.String, java.lang.String) is not
+          // suitable because it replaces " " with "+".
+          String encodedPath = new URI(null, null, filePath, null).getRawPath();
+          return URI.create("file:" + encodedPath).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
+          throw new IllegalArgumentException("Unable to create URL for file " + filePath, e);
+        }
+      }
+
+      URI uri = null;
+      try {
+        // convert absolute file paths
+        uri = file.toURI();
+        return uri.toURL();
+      } catch (SecurityException e) {
+        throw new IllegalArgumentException("No access to the underlying file " + filePath, e);
+      } catch (MalformedURLException e) {
+        throw new IllegalArgumentException("Unable to convert URI " + uri + " to URL", e);
+      }
     }
 
-    public URL url() {
-      if (url == null) {
-        throw new UnsupportedOperationException();
-      }
+    @Override public String toString() {
+      return (urlGenerated ? fileNonNull() : url).toString();
+    }
+
+    @Override public URL url() {
       return url;
     }
 
-    public File file() {
+    @Override public File file() {
       if (file == null) {
         throw new UnsupportedOperationException();
       }
       return file;
     }
 
-    public String protocol() {
+    @Override public Optional<File> fileOpt() {
+      return Optional.ofNullable(file);
+    }
+
+    @Override public String protocol() {
       return file != null ? "file" : url.getProtocol();
     }
 
-    public String path() {
+    @Override public String path() {
       if (file != null) {
         return file.getPath();
       }
@@ -143,7 +276,7 @@ public abstract class Sources {
       }
     }
 
-    public Reader reader() throws IOException {
+    @Override public Reader reader() throws IOException {
       final InputStream is;
       if (path().endsWith(".gz")) {
         final InputStream fis = openStream();
@@ -154,30 +287,30 @@ public abstract class Sources {
       return new InputStreamReader(is, StandardCharsets.UTF_8);
     }
 
-    public InputStream openStream() throws IOException {
+    @Override public InputStream openStream() throws IOException {
       if (file != null) {
-        return new FileInputStream(file);
+        return Files.newInputStream(file.toPath());
       } else {
         return url.openStream();
       }
     }
 
-    public Source trim(String suffix) {
+    @Override public Source trim(String suffix) {
       Source x = trimOrNull(suffix);
       return x == null ? this : x;
     }
 
-    public Source trimOrNull(String suffix) {
-      if (url != null) {
+    @Override public @Nullable Source trimOrNull(String suffix) {
+      if (!urlGenerated) {
         final String s = Sources.trimOrNull(url.toExternalForm(), suffix);
         return s == null ? null : Sources.url(s);
       } else {
-        final String s = Sources.trimOrNull(file.getPath(), suffix);
+        final String s = Sources.trimOrNull(fileNonNull().getPath(), suffix);
         return s == null ? null : of(new File(s));
       }
     }
 
-    public Source append(Source child) {
+    @Override public Source append(Source child) {
       if (isFile(child)) {
         if (child.file().isAbsolute()) {
           return child;
@@ -194,7 +327,7 @@ public abstract class Sources {
         }
       }
       String path = child.path();
-      if (url != null) {
+      if (!urlGenerated) {
         String encodedPath = new File(".").toURI().relativize(new File(path).toURI())
             .getRawSchemeSpecificPart();
         return Sources.url(url + "/" + encodedPath);
@@ -203,11 +336,12 @@ public abstract class Sources {
       }
     }
 
-    public Source relative(Source parent) {
+    @Override public Source relative(Source parent) {
       if (isFile(parent)) {
         if (isFile(this)
-            && file.getPath().startsWith(parent.file().getPath())) {
-          String rest = file.getPath().substring(parent.file().getPath().length());
+            && fileNonNull().getPath().startsWith(parent.file().getPath())) {
+          String rest =
+              fileNonNull().getPath().substring(parent.file().getPath().length());
           if (rest.startsWith(File.separator)) {
             return Sources.file(null, rest.substring(File.separator.length()));
           }
@@ -215,8 +349,9 @@ public abstract class Sources {
         return this;
       } else {
         if (!isFile(this)) {
-          String rest = Sources.trimOrNull(url.toExternalForm(),
-              parent.url().toExternalForm());
+          String rest =
+              Sources.trimOrNull(url.toExternalForm(),
+                  parent.url().toExternalForm());
           if (rest != null
               && rest.startsWith("/")) {
             return Sources.file(null, rest.substring(1));
@@ -227,5 +362,3 @@ public abstract class Sources {
     }
   }
 }
-
-// End Sources.java
