@@ -36,10 +36,15 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.Collections2;
+import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 
+import org.apiguardian.api.API;
+import org.checkerframework.checker.nullness.qual.Nullable;
+import org.checkerframework.checker.nullness.qual.PolyNull;
+import org.checkerframework.dataflow.qual.Pure;
 import org.slf4j.Logger;
 
 import java.io.BufferedReader;
@@ -58,12 +63,13 @@ import java.io.PrintWriter;
 import java.io.Reader;
 import java.io.StringReader;
 import java.io.StringWriter;
+import java.io.UncheckedIOException;
 import java.io.Writer;
 import java.lang.reflect.Array;
 import java.lang.reflect.Field;
-import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -83,6 +89,7 @@ import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
+import java.util.IllformedLocaleException;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -95,18 +102,31 @@ import java.util.RandomAccess;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.TimeZone;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.ObjIntConsumer;
 import java.util.function.Predicate;
+import java.util.function.UnaryOperator;
 import java.util.jar.JarFile;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collector;
-import javax.annotation.Nonnull;
+
+import static org.apache.calcite.linq4j.Nullness.castNonNull;
+import static org.apache.calcite.util.ReflectUtil.isStatic;
+
+import static java.lang.Integer.parseInt;
+import static java.util.Objects.requireNonNull;
 
 /**
  * Miscellaneous utility functions.
  */
 public class Util {
+
+  private static final int QUICK_DISTINCT = 15;
+  private static final Pattern UNDERSCORE = Pattern.compile("_+");
+
   private Util() {}
 
   //~ Static fields/initializers ---------------------------------------------
@@ -117,7 +137,7 @@ public class Util {
    * <p>In general, you should not use this in expected results of tests.
    * Expected results should be the expected result on Linux (or Mac OS) using
    * '\n'. Apply {@link Util#toLinux(String)} to Windows actual results, if
-   * necessary, to make them look like Linux actual.</p>
+   * necessary, to make them look like Linux actual.
    */
   public static final String LINE_SEPARATOR =
       System.getProperty("line.separator");
@@ -201,10 +221,7 @@ public class Util {
    * you are not interested in, but you don't want the compiler to warn that
    * you are not using it.
    */
-  public static void discard(Object o) {
-    if (false) {
-      discard(o);
-    }
+  public static void discard(@Nullable Object unused) {
   }
 
   /**
@@ -212,10 +229,7 @@ public class Util {
    * you are not interested in, but you don't want the compiler to warn that
    * you are not using it.
    */
-  public static void discard(int i) {
-    if (false) {
-      discard(i);
-    }
+  public static void discard(int unused) {
   }
 
   /**
@@ -223,10 +237,7 @@ public class Util {
    * you are not interested in, but you don't want the compiler to warn that
    * you are not using it.
    */
-  public static void discard(boolean b) {
-    if (false) {
-      discard(b);
-    }
+  public static void discard(boolean unused) {
   }
 
   /**
@@ -234,10 +245,7 @@ public class Util {
    * you are not interested in, but you don't want the compiler to warn that
    * you are not using it.
    */
-  public static void discard(double d) {
-    if (false) {
-      discard(d);
-    }
+  public static void discard(double unused) {
   }
 
   /**
@@ -249,7 +257,7 @@ public class Util {
    */
   public static void swallow(
       Throwable e,
-      Logger logger) {
+      @Nullable Logger logger) {
     if (logger != null) {
       logger.debug("Discarding exception", e);
     }
@@ -298,7 +306,7 @@ public class Util {
   @Deprecated // to be removed before 2.0
   public static int hash(
       int h,
-      Object o) {
+      @Nullable Object o) {
     int k = (o == null) ? 0 : o.hashCode();
     return ((h << 4) | h) ^ k;
   }
@@ -357,6 +365,15 @@ public class Util {
   }
 
   /**
+   * Computes <code>nlog(m)</code> using the natural logarithm (or <code>
+   * n</code> if <code>m &lt; {@link Math#E}</code>, so the result is never
+   * negative.
+   */
+  public static double nLogM(double n, double m) {
+    return (m < Math.E) ? n : (n * Math.log(m));
+  }
+
+  /**
    * Prints an object using reflection. We can handle <code>null</code>;
    * arrays of objects and primitive values; for regular objects, we print all
    * public fields.
@@ -367,9 +384,10 @@ public class Util {
     print(pw, o, 0);
   }
 
+  @SuppressWarnings("JdkObsolete")
   public static void print(
       PrintWriter pw,
-      Object o,
+      @Nullable Object o,
       int indent) {
     if (o == null) {
       pw.print("null");
@@ -450,7 +468,7 @@ public class Util {
       Field[] fields = clazz.getFields();
       int printed = 0;
       for (Field field : fields) {
-        if (Modifier.isStatic(field.getModifiers())) {
+        if (isStatic(field)) {
           continue;
         }
         if (printed++ > 0) {
@@ -481,13 +499,13 @@ public class Util {
    * prints <code>"x\"y"</code>.
    *
    * <p>The appendable where the value is printed must not incur I/O operations. This method is
-   * not meant to be used for writing the values to permanent storage.</p>
+   * not meant to be used for writing the values to permanent storage.
    *
    * @throws IllegalStateException if the print to the specified appendable fails due to I/O
    */
   public static void printJavaString(
       Appendable appendable,
-      String s,
+      @Nullable String s,
       boolean nullMeansNull) {
     try {
       if (s == null) {
@@ -517,6 +535,21 @@ public class Util {
   }
 
   /**
+   * Formats a double value to a String ensuring that the output
+   * is in scientific notation if the value is not "special".
+   * (Special values include infinities and NaN.)
+   */
+  public static String toScientificNotation(Double d) {
+    String repr = Double.toString(d);
+    if (!repr.toLowerCase(Locale.ENGLISH).contains("e")
+        && !d.isInfinite()
+        && !d.isNaN()) {
+      repr += "E0";
+    }
+    return repr;
+  }
+
+  /**
    * Formats a {@link BigDecimal} value to a string in scientific notation For
    * example<br>
    *
@@ -540,6 +573,10 @@ public class Util {
     int len = unscaled.length();
     int scale = bd.scale();
     int e = len - scale - 1;
+    if (bd.stripTrailingZeros().equals(BigDecimal.ZERO)) {
+      // Without this adjustment 0.0 generates 0E-1
+      e = 0;
+    }
 
     StringBuilder ret = new StringBuilder();
     if (bd.signum() < 0) {
@@ -553,7 +590,7 @@ public class Util {
             Math.min(truncateAt, len));
     ret.append(unscaled.charAt(0));
     if (scale == 0) {
-      // trim trailing zeroes since they aren't significant
+      // trim trailing zeros since they aren't significant
       int i = unscaled.length();
       while (i > 1) {
         if (unscaled.charAt(i - 1) != '0') {
@@ -626,7 +663,7 @@ public class Util {
       }
     }
     path = "file://" + path;
-    return new URL(path);
+    return URI.create(path).toURL();
   }
 
   /**
@@ -634,6 +671,7 @@ public class Util {
    * string reflects the current time.
    */
   @Deprecated // to be removed before 2.0
+  @SuppressWarnings("JavaUtilDate")
   public static String getFileTimestamp() {
     SimpleDateFormat sdf =
         new SimpleDateFormat(FILE_TIMESTAMP_FORMAT, Locale.ROOT);
@@ -661,16 +699,16 @@ public class Util {
    *
    * <p>The mapping is one-to-one (that is, distinct strings will produce
    * distinct java identifiers). The mapping is also reversible, but the
-   * inverse mapping is not implemented.</p>
+   * inverse mapping is not implemented.
    *
    * <p>A valid Java identifier must start with a Unicode letter, underscore,
    * or dollar sign ($). The other characters, if any, can be a Unicode
-   * letter, underscore, dollar sign, or digit.</p>
+   * letter, underscore, dollar sign, or digit.
    *
    * <p>This method uses an algorithm similar to URL encoding. Valid
    * characters are unchanged; invalid characters are converted to an
    * underscore followed by the hex code of the character; and underscores are
-   * doubled.</p>
+   * doubled.
    *
    * <p>Examples:
    *
@@ -719,6 +757,7 @@ public class Util {
 
   /**
    * Returns true when input string is a valid Java identifier.
+   *
    * @param s input string
    * @return true when input string is a valid Java identifier
    */
@@ -741,7 +780,7 @@ public class Util {
   }
 
   public static String toLinux(String s) {
-    return s.replaceAll("\r\n", "\n");
+    return s.replace("\r\n", "\n");
   }
 
   /**
@@ -761,10 +800,10 @@ public class Util {
   }
 
   /**
-   * @return true if s==null or if s.length()==0
+   * Returns whether s == null or if s.length() == 0.
    */
-  public static boolean isNullOrEmpty(String s) {
-    return (null == s) || (s.length() == 0);
+  public static boolean isNullOrEmpty(@Nullable String s) {
+    return s == null || s.isEmpty();
   }
 
   /**
@@ -788,7 +827,9 @@ public class Util {
     case -1:
       return "";
     case 0:
-      return list.get(0).toString();
+      return String.valueOf(list.get(0));
+    default:
+      break;
     }
     final StringBuilder buf = new StringBuilder();
     for (int i = 0;; i++) {
@@ -800,9 +841,54 @@ public class Util {
     }
   }
 
+  /** Prints a collection of elements to a StringBuilder, in the same format as
+   * {@link AbstractCollection#toString()}. */
+  public static <E> StringBuilder printIterable(StringBuilder sb,
+      Iterable<E> iterable) {
+    final Iterator<E> it = iterable.iterator();
+    if (!it.hasNext()) {
+      return sb.append("[]");
+    }
+    sb.append('[');
+    for (;;) {
+      final E e = it.next();
+      sb.append(e);
+      if (!it.hasNext()) {
+        return sb.append(']');
+      }
+      sb.append(", ");
+    }
+  }
+
+  /** Prints a set of elements to a StringBuilder, in the same format same as
+   * {@link AbstractCollection#toString()}.
+   *
+   * <p>The 'set' is represented by the number of elements and an action to
+   * perform for each element.
+   *
+   * <p>This method can be a very efficient way to convert a structure to a
+   * string, because the components can write directly to the StringBuilder
+   * rather than constructing intermediate strings.
+   *
+   * @see org.apache.calcite.linq4j.function.Functions#generate */
+  public static StringBuilder printList(StringBuilder sb, int elementCount,
+      ObjIntConsumer<StringBuilder> consumer) {
+    if (elementCount == 0) {
+      return sb.append("[]");
+    }
+    sb.append('[');
+    for (int i = 0;;) {
+      consumer.accept(sb, i);
+      if (++i == elementCount) {
+        return sb.append(']');
+      }
+      sb.append(", ");
+    }
+  }
+
   /**
    * Returns the {@link Charset} object representing the value of
-   * {@link CalciteSystemProperty#DEFAULT_CHARSET}
+   * {@link CalciteSystemProperty#DEFAULT_CHARSET}.
    *
    * @throws java.nio.charset.IllegalCharsetNameException If the given charset
    *                                                      name is illegal
@@ -816,18 +902,21 @@ public class Util {
     return DEFAULT_CHARSET;
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Throw new {@link AssertionError} */
   @Deprecated // to be removed before 2.0
   public static Error newInternal() {
     return new AssertionError("(unknown cause)");
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Throw new {@link AssertionError} */
   @Deprecated // to be removed before 2.0
   public static Error newInternal(String s) {
     return new AssertionError(s);
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Throw new {@link RuntimeException} if checked; throw raw
    * exception if unchecked or {@link Error} */
   @Deprecated // to be removed before 2.0
@@ -835,25 +924,63 @@ public class Util {
     return new AssertionError(e);
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Throw new {@link AssertionError} if applicable;
    * or {@link RuntimeException} if e is checked;
    * or raw exception if e is unchecked or {@link Error}. */
+  @SuppressWarnings("MissingSummary")
   public static Error newInternal(Throwable e, String s) {
     return new AssertionError("Internal error: " + s, e);
   }
 
-  /** As {@link Throwables}{@code .throwIfUnchecked(Throwable)},
-   * which was introduced in Guava 20,
-   * but we don't require Guava version 20 yet. */
+  /** As {@link Throwables#throwIfUnchecked(Throwable)}. */
+  @Deprecated // to be removed before 2.0
   public static void throwIfUnchecked(Throwable throwable) {
-    Bug.upgrade("Remove when minimum Guava version is 20");
-    Objects.requireNonNull(throwable);
+    Throwables.throwIfUnchecked(throwable);
+  }
+
+  /**
+   * This method rethrows input throwable as is (if its unchecked) or
+   * wraps it with {@link RuntimeException} and throws.
+   *
+   * <p>The typical usage would be {@code throw throwAsRuntime(...)}, where
+   * {@code throw} statement is needed so Java compiler knows the execution
+   * stops at that line.
+   *
+   * @param throwable input throwable
+   * @return the method never returns, it always throws an unchecked exception
+   */
+  @API(since = "1.26", status = API.Status.EXPERIMENTAL)
+  public static RuntimeException throwAsRuntime(Throwable throwable) {
+    Throwables.throwIfUnchecked(throwable);
+    throw new RuntimeException(throwable);
+  }
+
+  /**
+   * This method rethrows input throwable as is (if its unchecked) with an extra
+   * message or wraps it with {@link RuntimeException} and throws.
+   *
+   * <p>The typical usage would be {@code throw throwAsRuntime(...)}, where
+   * {@code throw} statement is needed so Java compiler knows the execution
+   * stops at that line.
+   *
+   * @param throwable input throwable
+   * @return the method never returns, it always throws an unchecked exception
+   */
+  @API(since = "1.26", status = API.Status.EXPERIMENTAL)
+  public static RuntimeException throwAsRuntime(String message, Throwable throwable) {
     if (throwable instanceof RuntimeException) {
+      throwable.addSuppressed(new Throwable(message));
       throw (RuntimeException) throwable;
     }
     if (throwable instanceof Error) {
+      throwable.addSuppressed(new Throwable(message));
       throw (Error) throwable;
     }
+    if (throwable instanceof IOException) {
+      return new UncheckedIOException(message, (IOException) throwable);
+    }
+    throw new RuntimeException(message, throwable);
   }
 
   /**
@@ -865,7 +992,22 @@ public class Util {
     if (e instanceof RuntimeException) {
       return (RuntimeException) e;
     }
+    if (e instanceof IOException) {
+      return new UncheckedIOException((IOException) e);
+    }
     return new RuntimeException(e);
+  }
+
+  /**
+   * Returns cause of the given throwable if it is non-null or the throwable itself.
+   *
+   * @param throwable input throwable
+   * @return cause of the given throwable if it is non-null or the throwable itself
+   */
+  @API(since = "1.26", status = API.Status.EXPERIMENTAL)
+  public static Throwable causeOrSelf(Throwable throwable) {
+    Throwable cause = throwable.getCause();
+    return cause != null ? cause : throwable;
   }
 
   /**
@@ -907,6 +1049,7 @@ public class Util {
     return sw.toString();
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Use {@link Preconditions#checkArgument}
    * or {@link Objects#requireNonNull(Object)} */
   @Deprecated // to be removed before 2.0
@@ -916,6 +1059,7 @@ public class Util {
     }
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Use {@link Preconditions#checkArgument}
    * or {@link Objects#requireNonNull(Object)} */
   @Deprecated // to be removed before 2.0
@@ -925,6 +1069,7 @@ public class Util {
     }
   }
 
+  // CHECKSTYLE: IGNORE 1
   /** @deprecated Use {@link Preconditions#checkArgument} */
   @Deprecated // to be removed before 2.0
   public static void permAssert(boolean b, String description) {
@@ -938,7 +1083,7 @@ public class Util {
    * feature has not been implemented, but should be.
    *
    * <p>If every 'hole' in our functionality uses this method, it will be
-   * easier for us to identity the holes. Throwing a
+   * easier for us to identify the holes. Throwing a
    * {@link java.lang.UnsupportedOperationException} isn't as good, because
    * sometimes we actually want to partially implement an API.
    *
@@ -959,7 +1104,7 @@ public class Util {
    *          overridden and a subclass forgot to do so.
    * @return an {@link UnsupportedOperationException}.
    */
-  public static RuntimeException needToImplement(Object o) {
+  public static RuntimeException needToImplement(@Nullable Object o) {
     String description = null;
     if (o != null) {
       description = o.getClass().toString() + ": " + o.toString();
@@ -1079,7 +1224,7 @@ public class Util {
    * @param jar jar to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchJar(JarFile jar) {
+  public static void squelchJar(@Nullable JarFile jar) {
     try {
       if (jar != null) {
         jar.close();
@@ -1097,7 +1242,7 @@ public class Util {
    * @param stream stream to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchStream(InputStream stream) {
+  public static void squelchStream(@Nullable InputStream stream) {
     try {
       if (stream != null) {
         stream.close();
@@ -1117,7 +1262,7 @@ public class Util {
    * @param stream stream to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchStream(OutputStream stream) {
+  public static void squelchStream(@Nullable OutputStream stream) {
     try {
       if (stream != null) {
         stream.close();
@@ -1135,7 +1280,7 @@ public class Util {
    * @param reader reader to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchReader(Reader reader) {
+  public static void squelchReader(@Nullable Reader reader) {
     try {
       if (reader != null) {
         reader.close();
@@ -1155,7 +1300,7 @@ public class Util {
    * @param writer writer to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchWriter(Writer writer) {
+  public static void squelchWriter(@Nullable Writer writer) {
     try {
       if (writer != null) {
         writer.close();
@@ -1173,7 +1318,7 @@ public class Util {
    * @param stmt stmt to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchStmt(Statement stmt) {
+  public static void squelchStmt(@Nullable Statement stmt) {
     try {
       if (stmt != null) {
         stmt.close();
@@ -1191,7 +1336,7 @@ public class Util {
    * @param connection connection to close
    */
   @Deprecated // to be removed before 2.0
-  public static void squelchConnection(Connection connection) {
+  public static void squelchConnection(@Nullable Connection connection) {
     try {
       if (connection != null) {
         connection.close();
@@ -1214,7 +1359,7 @@ public class Util {
       if (s.charAt(n) != ' ') {
         return s;
       }
-      while ((--n) >= 0) {
+      while (--n >= 0) {
         if (s.charAt(n) != ' ') {
           return s.substring(0, n + 1);
         }
@@ -1270,17 +1415,17 @@ public class Util {
   public static Iterable<String> tokenize(final String s, final String delim) {
     return new Iterable<String>() {
       final StringTokenizer t = new StringTokenizer(s, delim);
-      public Iterator<String> iterator() {
+      @Override public Iterator<String> iterator() {
         return new Iterator<String>() {
-          public boolean hasNext() {
+          @Override public boolean hasNext() {
             return t.hasMoreTokens();
           }
 
-          public String next() {
+          @Override public String next() {
             return t.nextToken();
           }
 
-          public void remove() {
+          @Override public void remove() {
             throw new UnsupportedOperationException("remove");
           }
         };
@@ -1317,21 +1462,19 @@ public class Util {
    * time
    * <li>The second offset is how many hours changed during DST. Default=1
    * <li>'start' and 'end' are the dates when DST goes into (and out of)
-   *     effect.<br>
-   *     <br>
-   *     They can each be one of three forms:
+   *     effect. They can each be one of three forms:
    *
-   *     <ol>
-   *     <li>Mm.w.d {month=1-12, week=1-5 (5 is always last), day=0-6}
-   *     <li>Jn {n=1-365 Feb29 is never counted}
-   *     <li>n {n=0-365 Feb29 is counted in leap years}
-   *     </ol>
+   * <ol>
+   * <li>Mm.w.d {month=1-12, week=1-5 (5 is always last), day=0-6}
+   * <li>Jn {n=1-365 Feb29 is never counted}
+   * <li>n {n=0-365 Feb29 is counted in leap years}
+   * </ol>
    * </li>
    *
    * <li>'time' has the same format as 'offset', and defaults to 02:00:00.</li>
    * </ul>
    *
-   * <p>For example:</p>
+   * <p>For example:
    *
    * <ul>
    * <li>"PST-8PDT01:00:00,M4.1.0/02:00:00,M10.1.0/02:00:00"; or more tersely
@@ -1388,18 +1531,18 @@ public class Util {
           + tzString);
     }
     int j = 0;
-    int startMode = Integer.valueOf(matcher.group(++j));
-    int startMonth = Integer.valueOf(matcher.group(++j));
-    int startDay = Integer.valueOf(matcher.group(++j));
-    int startDayOfWeek = Integer.valueOf(matcher.group(++j));
-    int startTime = Integer.valueOf(matcher.group(++j));
-    int startTimeMode = Integer.valueOf(matcher.group(++j));
-    int endMode = Integer.valueOf(matcher.group(++j));
-    int endMonth = Integer.valueOf(matcher.group(++j));
-    int endDay = Integer.valueOf(matcher.group(++j));
-    int endDayOfWeek = Integer.valueOf(matcher.group(++j));
-    int endTime = Integer.valueOf(matcher.group(++j));
-    int endTimeMode = Integer.valueOf(matcher.group(++j));
+    int startMode = groupAsInt(matcher, ++j);
+    int startMonth = groupAsInt(matcher, ++j);
+    int startDay = groupAsInt(matcher, ++j);
+    int startDayOfWeek = groupAsInt(matcher, ++j);
+    int startTime = groupAsInt(matcher, ++j);
+    int startTimeMode = groupAsInt(matcher, ++j);
+    int endMode = groupAsInt(matcher, ++j);
+    int endMonth = groupAsInt(matcher, ++j);
+    int endDay = groupAsInt(matcher, ++j);
+    int endDayOfWeek = groupAsInt(matcher, ++j);
+    int endTime = groupAsInt(matcher, ++j);
+    int endTimeMode = groupAsInt(matcher, ++j);
     appendPosixDaylightTransition(
         tz,
         buf,
@@ -1423,6 +1566,13 @@ public class Util {
         verbose,
         true);
     return buf.toString();
+  }
+
+  private static int groupAsInt(Matcher matcher, int index) {
+    String value =
+        requireNonNull(matcher.group(index),
+            () -> "no group for index " + index + ", matcher " + matcher);
+    return parseInt(value);
   }
 
   /**
@@ -1511,6 +1661,8 @@ public class Util {
         time += tz.getDSTSavings();
       }
       break;
+    default:
+      break;
     }
     if (verbose || (time != 7200000)) {
       // POSIX allows us to omit the time if it is 2am (the default)
@@ -1564,15 +1716,13 @@ public class Util {
    * @return Java locale object
    */
   public static Locale parseLocale(String localeString) {
-    String[] strings = localeString.split("_");
-    switch (strings.length) {
-    case 1:
-      return new Locale(strings[0]);
-    case 2:
-      return new Locale(strings[0], strings[1]);
-    case 3:
-      return new Locale(strings[0], strings[1], strings[2]);
-    default:
+    if (localeString.isEmpty()) {
+      return Locale.ROOT;
+    }
+    try {
+      return new Locale.Builder().setLanguageTag(
+          UNDERSCORE.matcher(localeString).replaceAll("-")).build();
+    } catch (IllformedLocaleException e) {
       throw new AssertionError("bad locale string '" + localeString + "'");
     }
   }
@@ -1600,33 +1750,24 @@ public class Util {
    * Converts a iterator whose members are automatically down-cast to a given
    * type.
    *
-   * <p>If a member of the backing iterator is not an instanceof <code>
-   * E</code>, {@link Iterator#next()}) will throw a
+   * <p>If a member of the backing iterator is not an instance of {@code E},
+   * {@link Iterator#next()}) will throw a
    * {@link ClassCastException}.
    *
    * <p>All modifications are automatically written to the backing iterator.
    * Not synchronized.
    *
-   * @param iter  Backing iterator.
-   * @param clazz Class to cast to.
+   * <p>If the backing iterator has not-nullable elements,
+   * the returned iterator has not-nullable elements.
+   *
+   * @param iter  Backing iterator
+   * @param clazz Class to cast to
    * @return An iterator whose members are of the desired type.
    */
-  public static <E> Iterator<E> cast(
-      final Iterator<?> iter,
+  public static <E extends @PolyNull Object> Iterator<E> cast(
+      final Iterator<? extends @PolyNull Object> iter,
       final Class<E> clazz) {
-    return new Iterator<E>() {
-      public boolean hasNext() {
-        return iter.hasNext();
-      }
-
-      public E next() {
-        return clazz.cast(iter.next());
-      }
-
-      public void remove() {
-        iter.remove();
-      }
-    };
+    return transform(iter, x -> clazz.cast(castNonNull(x)));
   }
 
   /**
@@ -1643,7 +1784,12 @@ public class Util {
   public static <E> Iterable<E> cast(
       final Iterable<? super E> iterable,
       final Class<E> clazz) {
-    return () -> cast(iterable.iterator(), clazz);
+    // FluentIterable provides toString
+    return new FluentIterable<E>() {
+      @Override public Iterator<E> iterator() {
+        return Util.cast(iterable.iterator(), clazz);
+      }
+    };
   }
 
   /**
@@ -1653,11 +1799,12 @@ public class Util {
    * <p>The returned object is an {@link Iterable},
    * which makes it ideal for use with the 'foreach' construct. For example,
    *
-   * <blockquote><code>List&lt;Number&gt; numbers = Arrays.asList(1, 2, 3.14,
-   * 4, null, 6E23);<br>
-   * for (int myInt : filter(numbers, Integer.class)) {<br>
-   * &nbsp;&nbsp;&nbsp;&nbsp;print(i);<br>
-   * }</code></blockquote>
+   * <blockquote><pre>{@code
+   *   List<Number> numbers = Arrays.asList(1, 2, 3.14, 4, null, 6E23);
+   *   for (int myInt : filter(numbers, Integer.class)) {
+   *     print(i);
+   *   }
+   * }</pre></blockquote>
    *
    * <p>will print 1, 2, 4.
    *
@@ -1667,7 +1814,12 @@ public class Util {
   public static <E> Iterable<E> filter(
       final Iterable<?> iterable,
       final Class<E> includeFilter) {
-    return () -> new Filterator<>(iterable.iterator(), includeFilter);
+    // FluentIterable provides toString
+    return new FluentIterable<E>() {
+      @Override public Iterator<E> iterator() {
+        return new Filterator<>(iterable.iterator(), includeFilter);
+      }
+    };
   }
 
   public static <E> Collection<E> filter(
@@ -1676,18 +1828,18 @@ public class Util {
     return new AbstractCollection<E>() {
       private int size = -1;
 
-      public Iterator<E> iterator() {
+      @Override public Iterator<E> iterator() {
         return new Filterator<>(collection.iterator(), includeFilter);
       }
 
-      public int size() {
+      @Override public int size() {
         if (size == -1) {
           // Compute size.  This is expensive, but the value
           // collection.size() is not correct since we're
           // filtering values.  (Some java.util algorithms
           // call next() on the result of iterator() size() times.)
           int s = 0;
-          for (E e : this) {
+          for (@SuppressWarnings("unused") E e : this) {
             s++;
           }
           size = s;
@@ -1816,7 +1968,7 @@ public class Util {
    * @param <T>   Enum class type
    * @return Enum constant or null
    */
-  public static synchronized <T extends Enum<T>> T enumVal(
+  public static synchronized <T extends Enum<T>> @Nullable T enumVal(
       Class<T> clazz,
       String name) {
     return clazz.cast(ENUM_CONSTANTS.getUnchecked(clazz).get(name));
@@ -1832,7 +1984,7 @@ public class Util {
    * @return         Enum constant, never null
    */
   public static synchronized <T extends Enum<T>> T enumVal(T default_,
-      String name) {
+      @Nullable String name) {
     final Class<T> clazz = default_.getDeclaringClass();
     final T t = clazz.cast(ENUM_CONSTANTS.getUnchecked(clazz).get(name));
     if (t == null) {
@@ -1846,28 +1998,15 @@ public class Util {
    * starting at element {@code k}.
    *
    * <p>It is OK if the list is empty or its size is not a multiple of
-   * {@code n}.</p>
+   * {@code n}.
    *
    * <p>For instance, {@code quotientList(list, 2, 0)} returns the even
    * elements of a list, and {@code quotientList(list, 2, 1)} returns the odd
-   * elements. Those lists are the same length only if list has even size.</p>
+   * elements. Those lists are the same length only if list has even size.
    */
   public static <E> List<E> quotientList(
       final List<E> list, final int n, final int k) {
-    if (n <= 0 || k < 0 || k >= n) {
-      throw new IllegalArgumentException(
-          "n must be positive; k must be between 0 and n - 1");
-    }
-    final int size = (list.size() + n - k - 1) / n;
-    return new AbstractList<E>() {
-      public E get(int index) {
-        return list.get(index * n + k);
-      }
-
-      public int size() {
-        return size;
-      }
-    };
+    return new QuotientList<>(list, n, k);
   }
 
   /** Given a list with N elements
@@ -1876,7 +2015,6 @@ public class Util {
    * [ (e<sub>0</sub>, e<sub>1</sub>),
    * (e<sub>2</sub>, e<sub>3</sub>), ... ]. */
   public static <E> List<Pair<E, E>> pairs(final List<E> list) {
-    //noinspection unchecked
     return Pair.zip(quotientList(list, 2, 0),
         quotientList(list, 2, 1));
   }
@@ -1884,64 +2022,72 @@ public class Util {
   /** Returns the first value if it is not null,
    * otherwise the second value.
    *
-   * <p>The result may be null.
+   * <p>The result may be null only if the second argument is not null.
    *
    * <p>Equivalent to the Elvis operator ({@code ?:}) of languages such as
    * Groovy or PHP. */
-  public static <T> T first(T v0, T v1) {
+  public static <T extends Object> @PolyNull T first(@Nullable T v0, @PolyNull T v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Double} value,
    * using a given default value if it is null. */
-  public static double first(Double v0, double v1) {
+  public static double first(@Nullable Double v0, double v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Float} value,
    * using a given default value if it is null. */
-  public static float first(Float v0, float v1) {
+  public static float first(@Nullable Float v0, float v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Integer} value,
    * using a given default value if it is null. */
-  public static int first(Integer v0, int v1) {
+  public static int first(@Nullable Integer v0, int v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Long} value,
    * using a given default value if it is null. */
-  public static long first(Long v0, long v1) {
+  public static long first(@Nullable Long v0, long v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Boolean} value,
    * using a given default value if it is null. */
-  public static boolean first(Boolean v0, boolean v1) {
+  public static boolean first(@Nullable Boolean v0, boolean v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Short} value,
    * using a given default value if it is null. */
-  public static short first(Short v0, short v1) {
+  public static short first(@Nullable Short v0, short v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Character} value,
    * using a given default value if it is null. */
-  public static char first(Character v0, char v1) {
+  public static char first(@Nullable Character v0, char v1) {
     return v0 != null ? v0 : v1;
   }
 
   /** Unboxes a {@link Byte} value,
    * using a given default value if it is null. */
-  public static byte first(Byte v0, byte v1) {
+  public static byte first(@Nullable Byte v0, byte v1) {
     return v0 != null ? v0 : v1;
   }
 
-  public static <T> Iterable<T> orEmpty(Iterable<T> v0) {
+  public static <T> Iterable<T> orEmpty(@Nullable Iterable<T> v0) {
     return v0 != null ? v0 : ImmutableList.of();
+  }
+
+  /** Returns the first element of a list.
+   *
+   * @throws java.lang.IndexOutOfBoundsException if the list is empty
+   */
+  public <E> E first(List<E> list) {
+    return list.get(0);
   }
 
   /** Returns the last element of a list.
@@ -1950,6 +2096,11 @@ public class Util {
    */
   public static <E> E last(List<E> list) {
     return list.get(list.size() - 1);
+  }
+
+  /** Returns the first {@code n} elements of a list. */
+  public static <E> List<E> first(List<E> list, int n) {
+    return list.subList(0, n);
   }
 
   /** Returns every element of a list but its last element. */
@@ -1979,11 +2130,11 @@ public class Util {
 
   public static List<Integer> range(final int end) {
     return new AbstractList<Integer>() {
-      public int size() {
+      @Override public int size() {
         return end;
       }
 
-      public Integer get(int index) {
+      @Override public Integer get(int index) {
         return index;
       }
     };
@@ -1991,11 +2142,11 @@ public class Util {
 
   public static List<Integer> range(final int start, final int end) {
     return new AbstractList<Integer>() {
-      public int size() {
+      @Override public int size() {
         return end - start;
       }
 
-      public Integer get(int index) {
+      @Override public Integer get(int index) {
         return start + index;
       }
     };
@@ -2025,7 +2176,7 @@ public class Util {
       // Lists of size 0 and 1 are always distinct.
       return -1;
     }
-    if (size < 15) {
+    if (size < QUICK_DISTINCT) {
       // For smaller lists, avoid the overhead of creating a set. Threshold
       // determined empirically using UtilTest.testIsDistinctBenchmark.
       for (int i = 1; i < size; i++) {
@@ -2039,6 +2190,7 @@ public class Util {
       }
       return -1;
     }
+    // we use HashMap here, because it is more efficient than HashSet.
     final Map<E, Object> set = new HashMap<>(size);
     for (E e : list) {
       if (set.put(e, "") != null) {
@@ -2048,6 +2200,49 @@ public class Util {
     return -1;
   }
 
+  /**
+   * Returns whether the elements of {@code list} are definitely distinct
+   * and not null, working quickly and sometimes giving false negatives for
+   * large lists.
+   *
+   * <p>A return of true means that the list is distinct (true positive);
+   * a return of false means either that list is not distinct (true negative)
+   * or that the list is large and distinct (false negative).
+   * (If the list is large, a hash map would be required to do an accurate
+   * job, and this method does its best quickly.)
+   */
+  public static <E> boolean isDefinitelyDistinctAndNonNull(
+      List<? extends @Nullable E> list) {
+    final int size = list.size();
+    // An empty list is distinct.
+    if (size == 0) {
+      return true;
+    }
+    // Make sure that element zero is not null.
+    if (list.get(0) == null) {
+      return false;
+    }
+    if (size < QUICK_DISTINCT) {
+      // For smaller lists, avoid the overhead of creating a set. Threshold
+      // determined empirically using UtilTest.testIsDistinctBenchmark.
+      for (int i = 1; i < size; i++) {
+        final E e = list.get(i);
+        if (e == null) {
+          return false;
+        }
+        for (int j = i - 1; j >= 0; j--) {
+          final E e1 = list.get(j);
+          if (e.equals(e1)) {
+            return false;
+          }
+        }
+      }
+      return true;
+    }
+    // Too expensive to check.
+    return false;
+  }
+
   /** Converts a list into a list with unique elements.
    *
    * <p>The order is preserved; the second and subsequent occurrences are
@@ -2055,10 +2250,32 @@ public class Util {
    *
    * <p>If the list is already unique it is returned unchanged. */
   public static <E> List<E> distinctList(List<E> list) {
-    if (isDistinct(list)) {
-      return list;
+    // If the list is small, check for duplicates using pairwise comparison.
+    if (list.size() < QUICK_DISTINCT) {
+      if (isDistinct(list)) {
+        return list;
+      }
+    } else {
+      // Lists that have all the same element are common. Avoiding creating a
+      // set.
+      if (allSameElement(list)) {
+        return ImmutableList.of(list.get(0));
+      }
     }
     return ImmutableList.copyOf(new LinkedHashSet<>(list));
+  }
+
+  /** Returns whether all of the elements of a list are equal.
+   * The list is assumed to be non-empty. */
+  private static <E> boolean allSameElement(List<E> list) {
+    final Iterator<E> iterator = list.iterator();
+    final E first = iterator.next();
+    while (iterator.hasNext()) {
+      if (!Objects.equals(first, iterator.next())) {
+        return false;
+      }
+    }
+    return true;
   }
 
   /** Converts an iterable into a list with unique elements.
@@ -2185,7 +2402,7 @@ public class Util {
   /** Converts a number into human-readable form, with 3 digits and a "K", "M"
    * or "G" multiplier for thousands, millions or billions.
    *
-   * <p>Examples: -2, 0, 1, 999, 1.00K, 1.99K, 3.45M, 4.56B.</p>
+   * <p>Examples: -2, 0, 1, 999, 1.00K, 1.99K, 3.45M, 4.56B.
    */
   public static String human(double d) {
     if (d == 0d) {
@@ -2249,22 +2466,23 @@ public class Util {
         Collections2.transform(values, v -> Pair.of(function.apply(v), v));
     final Set<Map.Entry<K, V>> entrySet =
         new AbstractSet<Map.Entry<K, V>>() {
-          public Iterator<Map.Entry<K, V>> iterator() {
+          @Override public Iterator<Map.Entry<K, V>> iterator() {
             return entries.iterator();
           }
 
-          public int size() {
+          @Override public int size() {
             return entries.size();
           }
         };
     return new AbstractMap<K, V>() {
-      public Set<Entry<K, V>> entrySet() {
+      @SuppressWarnings("override.return.invalid")
+      @Override public Set<Entry<K, V>> entrySet() {
         return entrySet;
       }
     };
   }
 
-  @SuppressWarnings("Guava")
+  @SuppressWarnings({"Guava", "UnnecessaryMethodReference"})
   @Deprecated
   public static <K, V> Map<K, V> asIndexMap(
       final Collection<V> values,
@@ -2356,8 +2574,24 @@ public class Util {
     return reader(new FileInputStream(file));
   }
 
-  /** Creates a {@link Calendar} in the UTC time zone and root locale.
-   * Does not use the time zone or locale. */
+  /** Given an {@link Appendable}, performs an action that requires a
+   * {@link StringBuilder}. Casts the Appendable if possible. */
+  public static void asStringBuilder(Appendable appendable,
+      Consumer<StringBuilder> consumer) {
+    if (appendable instanceof StringBuilder) {
+      consumer.accept((StringBuilder) appendable);
+    } else {
+      try {
+        final StringBuilder sb = new StringBuilder();
+        consumer.accept(sb);
+        appendable.append(sb);
+      } catch (IOException e) {
+        throw new RuntimeException(e);
+      }
+    }
+  }
+
+  /** Creates a {@link Calendar} in the UTC time zone and root locale. */
   public static Calendar calendar() {
     return Calendar.getInstance(DateTimeUtils.UTC_ZONE, Locale.ROOT);
   }
@@ -2370,49 +2604,148 @@ public class Util {
     return calendar;
   }
 
+  /** Creates a {@link Calendar} in the specified time zone. */
+  public static Calendar calendar(long millis, TimeZone timeZone) {
+    Calendar calendar = Calendar.getInstance(timeZone, Locale.ROOT);
+    calendar.setTimeInMillis(millis);
+    return calendar;
+  }
+
   /**
    * Returns a {@code Collector} that accumulates the input elements into a
    * Guava {@link ImmutableList} via a {@link ImmutableList.Builder}.
    *
-   * <p>It will be obsolete when we move to {@link Bug#upgrade Guava 21.0},
-   * which has {@code ImmutableList.toImmutableList()}.
-   *
-   * @param <T> Type of the input elements
-   *
-   * @return a {@code Collector} that collects all the input elements into an
-   * {@link ImmutableList}, in encounter order
+   * @deprecated Use {@link ImmutableList#toImmutableList()}
    */
-  public static <T> Collector<T, ImmutableList.Builder<T>, ImmutableList<T>>
-      toImmutableList() {
-    return Collector.of(ImmutableList::builder, ImmutableList.Builder::add,
-        (t, u) -> {
-          t.addAll(u.build());
-          return t;
-        },
-        ImmutableList.Builder::build);
+  @Deprecated // to be removed before 2.0
+  public static <T> Collector<T, ?, ImmutableList<T>> toImmutableList() {
+    return ImmutableList./* do not simplify. */toImmutableList();
+  }
+
+  /** Combines a second immutable list builder into a first. */
+  public static <E> ImmutableList.Builder<E> combine(
+      ImmutableList.Builder<E> b0, ImmutableList.Builder<E> b1) {
+    b0.addAll(b1.build());
+    return b0;
+  }
+
+  /** Combines a second array list into a first. */
+  public static <E> ArrayList<E> combine(ArrayList<E> list0,
+      ArrayList<E> list1) {
+    list0.addAll(list1);
+    return list0;
+  }
+
+  /** Returns an operator that applies {@code op1} and then {@code op2}.
+   *
+   * <p>As {@link Function#andThen(Function)} but for {@link UnaryOperator}. */
+  public static <X> UnaryOperator<X> andThen(UnaryOperator<X> op1,
+      UnaryOperator<X> op2) {
+    return op1.andThen(op2)::apply;
   }
 
   /** Transforms a list, applying a function to each element. */
-  public static <F, T> List<T> transform(List<F> list,
-      java.util.function.Function<F, T> function) {
-    if (list instanceof RandomAccess) {
+  public static <F, T> List<T> transform(List<? extends F> list,
+      java.util.function.Function<? super F, ? extends T> function) {
+    if (list.isEmpty() && list instanceof ImmutableList) {
+      return ImmutableList.of(); // save ourselves some effort
+    } else if (list instanceof RandomAccess) {
       return new RandomAccessTransformingList<>(list, function);
     } else {
       return new TransformingList<>(list, function);
     }
   }
 
+  /** Transforms a list, applying a function to each element, also passing in
+   * the element's index in the list. */
+  public static <F, T> List<T> transformIndexed(List<? extends F> list,
+      BiFunction<? super F, Integer, ? extends T> function) {
+    if (list.isEmpty() && list instanceof ImmutableList) {
+      return ImmutableList.of(); // save ourselves some effort
+    } else if (list instanceof RandomAccess) {
+      return new RandomAccessTransformingIndexedList<>(list, function);
+    } else {
+      return new TransformingIndexedList<>(list, function);
+    }
+  }
+
+  /** Transforms an iterable, applying a function to each element. */
+  @API(since = "1.27", status = API.Status.EXPERIMENTAL)
+  public static <F, T> Iterable<T> transform(Iterable<? extends F> iterable,
+      java.util.function.Function<? super F, ? extends T> function) {
+    // FluentIterable provides toString
+    return new FluentIterable<T>() {
+      @Override public Iterator<T> iterator() {
+        return Util.transform(iterable.iterator(), function);
+      }
+    };
+  }
+
+  /** Transforms an iterator. */
+  @API(since = "1.27", status = API.Status.EXPERIMENTAL)
+  public static <F, T> Iterator<T> transform(Iterator<? extends F> iterator,
+      java.util.function.Function<? super F, ? extends T> function) {
+    return new TransformingIterator<>(iterator, function);
+  }
+
   /** Filters an iterable. */
-  public static <E> Iterable<E> filter(Iterable<E> iterable,
-      Predicate<E> predicate) {
-    return () -> filter(iterable.iterator(), predicate);
+  @API(since = "1.27", status = API.Status.EXPERIMENTAL)
+  public static <E> Iterable<E> filter(Iterable<? extends E> iterable,
+      Predicate<? super E> predicate) {
+    // FluentIterable provides toString
+    return new FluentIterable<E>() {
+      @Override public Iterator<E> iterator() {
+        return Util.filter(iterable.iterator(), predicate);
+      }
+    };
   }
 
   /** Filters an iterator. */
-  public static <E> Iterator<E> filter(Iterator<E> iterator,
-      Predicate<E> predicate) {
+  @API(since = "1.27", status = API.Status.EXPERIMENTAL)
+  public static <E> Iterator<E> filter(Iterator<? extends E> iterator,
+      Predicate<? super E> predicate) {
     return new FilteringIterator<>(iterator, predicate);
   }
+
+  /** Returns a list with any elements for which the predicate is true moved to
+   * the head of the list. The algorithm does not modify the list, is stable,
+   * and is idempotent. */
+  public static <E> List<E> moveToHead(List<? extends E> terms, Predicate<? super E> predicate) {
+    if (alreadyAtFront(terms, predicate)) {
+      //noinspection unchecked
+      return (List<E>) terms;
+    }
+    final List<E> newTerms = new ArrayList<>(terms.size());
+    for (E term : terms) {
+      if (predicate.test(term)) {
+        newTerms.add(term);
+      }
+    }
+    for (E term : terms) {
+      if (!predicate.test(term)) {
+        newTerms.add(term);
+      }
+    }
+    return newTerms;
+  }
+
+  /** Returns whether of the elements of a list for which predicate is true
+   * occur before all elements where the predicate is false. (Returns true in
+   * corner cases such as empty list, all true, or all false. */
+  private static <E> boolean alreadyAtFront(List<? extends E> list,
+      Predicate<? super E> predicate) {
+    boolean prev = true;
+    for (E e : list) {
+      final boolean pass = predicate.test(e);
+      if (pass && !prev) {
+        return false;
+      }
+      prev = pass;
+    }
+    return true;
+  }
+
+
 
   /** Returns a view of a list, picking the elements of a list with the given
    * set of ordinals. */
@@ -2439,17 +2772,18 @@ public class Util {
    * Exception used to interrupt a tree walk of any kind.
    */
   public static class FoundOne extends ControlFlowException {
-    private final Object node;
+    private final @Nullable Object node;
 
     /** Singleton instance. Can be used if you don't care about node. */
     @SuppressWarnings("ThrowableInstanceNeverThrown")
     public static final FoundOne NULL = new FoundOne(null);
 
-    public FoundOne(Object node) {
+    public FoundOne(@Nullable Object node) {
       this.node = node;
     }
 
-    public Object getNode() {
+    @Pure
+    public @Nullable Object getNode() {
       return node;
     }
   }
@@ -2476,24 +2810,24 @@ public class Util {
    * @param <T> Element type of this list
    */
   private static class TransformingList<F, T> extends AbstractList<T> {
-    private final java.util.function.Function<F, T> function;
-    private final List<F> list;
+    private final java.util.function.Function<? super F, ? extends T> function;
+    private final List<? extends F> list;
 
-    TransformingList(List<F> list,
-        java.util.function.Function<F, T> function) {
+    TransformingList(List<? extends F> list,
+        java.util.function.Function<? super F, ? extends T> function) {
       this.function = function;
       this.list = list;
     }
 
-    public T get(int i) {
+    @Override public T get(int i) {
       return function.apply(list.get(i));
     }
 
-    public int size() {
+    @Override public int size() {
       return list.size();
     }
 
-    @Override @Nonnull public Iterator<T> iterator() {
+    @Override public Iterator<T> iterator() {
       return listIterator();
     }
   }
@@ -2506,8 +2840,51 @@ public class Util {
    */
   private static class RandomAccessTransformingList<F, T>
       extends TransformingList<F, T> implements RandomAccess {
-    RandomAccessTransformingList(List<F> list,
-        java.util.function.Function<F, T> function) {
+    RandomAccessTransformingList(List<? extends F> list,
+        java.util.function.Function<? super F, ? extends T> function) {
+      super(list, function);
+    }
+  }
+
+  /** List that returns the same number of elements as a backing list,
+   * applying a transformation function to each one.
+   *
+   * @param <F> Element type of backing list
+   * @param <T> Element type of this list
+   */
+  private static class TransformingIndexedList<F, T> extends AbstractList<T> {
+    private final BiFunction<? super F, Integer, ? extends T> function;
+    private final List<? extends F> list;
+
+    TransformingIndexedList(List<? extends F> list,
+        BiFunction<? super F, Integer, ? extends T> function) {
+      this.function = function;
+      this.list = list;
+    }
+
+    @Override public T get(int i) {
+      return function.apply(list.get(i), i);
+    }
+
+    @Override public int size() {
+      return list.size();
+    }
+
+    @Override public Iterator<T> iterator() {
+      return listIterator();
+    }
+  }
+
+  /** Extension to {@link TransformingIndexedList} that implements
+   * {@link RandomAccess}.
+   *
+   * @param <F> Element type of backing list
+   * @param <T> Element type of this list
+   */
+  private static class RandomAccessTransformingIndexedList<F, T>
+      extends TransformingIndexedList<F, T> implements RandomAccess {
+    RandomAccessTransformingIndexedList(List<? extends F> list,
+        BiFunction<? super F, Integer, ? extends T> function) {
       super(list, function);
     }
   }
@@ -2518,21 +2895,23 @@ public class Util {
   private static class FilteringIterator<T> implements Iterator<T> {
     private static final Object DUMMY = new Object();
     final Iterator<? extends T> iterator;
-    private final Predicate<T> predicate;
+    private final Predicate<? super T> predicate;
     T current;
 
     FilteringIterator(Iterator<? extends T> iterator,
-        Predicate<T> predicate) {
+        Predicate<? super T> predicate) {
       this.iterator = iterator;
       this.predicate = predicate;
-      current = moveNext();
+      @SuppressWarnings("method.invocation.invalid")
+      T current = moveNext();
+      this.current = current;
     }
 
-    public boolean hasNext() {
+    @Override public boolean hasNext() {
       return current != DUMMY;
     }
 
-    public T next() {
+    @Override public T next() {
       final T t = this.current;
       current = moveNext();
       return t;
@@ -2548,6 +2927,65 @@ public class Util {
       return (T) DUMMY;
     }
   }
-}
 
-// End Util.java
+  /**
+   * An {@link java.util.Iterator} that transforms its elements on-the-fly.
+   *
+   * @param <F> The element type of the delegate iterator
+   * @param <T> The element type of this iterator
+   */
+  private static class TransformingIterator<F, T> implements Iterator<T> {
+    private final Iterator<? extends F> delegate;
+    private final java.util.function.Function<? super F, ? extends T> function;
+
+    TransformingIterator(Iterator<? extends F> delegate,
+        java.util.function.Function<? super F, ? extends T> function) {
+      this.delegate = delegate;
+      this.function = function;
+    }
+
+    @Override public boolean hasNext() {
+      return delegate.hasNext();
+    }
+
+    @Override public final T next() {
+      return function.apply(delegate.next());
+    }
+
+    @Override public void remove() {
+      delegate.remove();
+    }
+  }
+
+  /** Implements {@link Util#quotientList(List, int, int)};
+   * an anonymous inner class would not be able to implement
+   * {@link RandomAccess}, which is essential for how this class is used.
+   *
+   * @param <E> Element type */
+  private static class QuotientList<E>
+      extends AbstractList<E> implements RandomAccess {
+    private final List<E> list;
+    private final int n;
+    private final int k;
+    private final int size;
+
+    QuotientList(List<E> list, int n, int k) {
+      if (k < 0 || n <= 0 || k >= n) {
+        throw new IllegalArgumentException(
+            "n must be positive; k must be between 0 and n - 1");
+      }
+      this.list = list;
+      this.n = n;
+      this.k = k;
+      this.size = (list.size() + n - k - 1) / n;
+    }
+
+    @Override public int size() {
+      return size;
+    }
+
+    @Override public E get(int index) {
+      return list.get(index * n + k);
+    }
+  }
+}
