@@ -24,6 +24,7 @@ import org.apache.calcite.util.Util;
 
 import au.com.bytecode.opencsv.CSVReader;
 
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -35,6 +36,7 @@ import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -48,6 +50,9 @@ import java.util.regex.Pattern;
 
 import static org.apache.calcite.runtime.HttpUtils.appendURLEncodedArgs;
 import static org.apache.calcite.runtime.HttpUtils.post;
+
+import static java.lang.Boolean.parseBoolean;
+import static java.util.Objects.requireNonNull;
 
 /**
  * Implementation of {@link SplunkConnection} based on Splunk's REST API.
@@ -68,7 +73,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
 
   public SplunkConnectionImpl(String url, String username, String password)
       throws MalformedURLException {
-    this(new URL(url), username, password);
+    this(URI.create(url).toURL(), username, password);
   }
 
   public SplunkConnectionImpl(URL url, String username, String password) {
@@ -86,6 +91,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
     }
   }
 
+  @SuppressWarnings("CatchAndPrintStackTrace")
   private void connect() {
     BufferedReader rd = null;
 
@@ -122,23 +128,24 @@ public class SplunkConnectionImpl implements SplunkConnection {
     }
   }
 
-  public void getSearchResults(String search, Map<String, String> otherArgs,
-      List<String> fieldList, SearchResultListener srl) {
-    assert srl != null;
+  @Override public void getSearchResults(String search, Map<String, String> otherArgs,
+      @Nullable List<String> fieldList, SearchResultListener srl) {
+    requireNonNull(srl, "srl");
     Enumerator<Object> x = getSearchResults_(search, otherArgs, fieldList, srl);
     assert x == null;
   }
 
-  public Enumerator<Object> getSearchResultEnumerator(String search,
-      Map<String, String> otherArgs, List<String> fieldList) {
-    return getSearchResults_(search, otherArgs, fieldList, null);
+  @Override public Enumerator<Object> getSearchResultEnumerator(String search,
+      Map<String, String> otherArgs, @Nullable List<String> fieldList) {
+    return requireNonNull(
+        getSearchResults_(search, otherArgs, fieldList, null));
   }
 
-  private Enumerator<Object> getSearchResults_(
+  private @Nullable Enumerator<Object> getSearchResults_(
       String search,
       Map<String, String> otherArgs,
-      List<String> wantedFields,
-      SearchResultListener srl) {
+      @Nullable List<String> wantedFields,
+      @Nullable SearchResultListener srl) {
     String searchUrl =
         String.format(Locale.ROOT,
             "%s://%s:%d/services/search/jobs/export",
@@ -147,10 +154,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
             url.getPort());
 
     StringBuilder data = new StringBuilder();
-    Map<String, String> args = new LinkedHashMap<>();
-    if (otherArgs != null) {
-      args.putAll(otherArgs);
-    }
+    Map<String, String> args = new LinkedHashMap<>(otherArgs);
     args.put("search", search);
     // override these args
     args.put("output_mode", "csv");
@@ -181,9 +185,10 @@ public class SplunkConnectionImpl implements SplunkConnection {
   }
 
   private static void parseResults(InputStream in, SearchResultListener srl) {
-    try (CSVReader r = new CSVReader(
-        new BufferedReader(
-            new InputStreamReader(in, StandardCharsets.UTF_8)))) {
+    try (CSVReader r =
+             new CSVReader(
+                 new BufferedReader(
+                     new InputStreamReader(in, StandardCharsets.UTF_8)))) {
       String[] header = r.readNext();
       if (header != null
           && header.length > 0
@@ -257,9 +262,11 @@ public class SplunkConnectionImpl implements SplunkConnection {
 
     if (search == null) {
       printUsage("Missing required argument: search");
+      return;
     }
     if (field_list == null) {
       printUsage("Missing required argument: field_list");
+      return;
     }
 
     List<String> fieldList = StringUtils.decodeList(field_list, ',');
@@ -273,14 +280,13 @@ public class SplunkConnectionImpl implements SplunkConnection {
     Map<String, String> searchArgs = new HashMap<>();
     searchArgs.put("earliest_time", argsMap.get("earliest_time"));
     searchArgs.put("latest_time", argsMap.get("latest_time"));
-    searchArgs.put(
-        "field_list",
+    searchArgs.put("field_list",
         StringUtils.encodeList(fieldList, ',').toString());
 
 
     CountingSearchResultListener dummy =
         new CountingSearchResultListener(
-            Boolean.valueOf(argsMap.get("-print")));
+            parseBoolean(argsMap.get("-print")));
     long start = System.currentTimeMillis();
     c.getSearchResults(search, searchArgs, null, dummy);
 
@@ -294,7 +300,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
    * interface that just counts the results. */
   public static class CountingSearchResultListener
       implements SearchResultListener {
-    String[] fieldNames = null;
+    String @Nullable[] fieldNames;
     int resultCount = 0;
     final boolean print;
 
@@ -302,16 +308,16 @@ public class SplunkConnectionImpl implements SplunkConnection {
       this.print = print;
     }
 
-    public void setFieldNames(String[] fieldNames) {
+    @Override public void setFieldNames(String[] fieldNames) {
       this.fieldNames = fieldNames;
     }
 
-    public boolean processSearchResult(String[] values) {
+    @Override public boolean processSearchResult(String[] values) {
       resultCount++;
       if (print) {
-        for (int i = 0; i < this.fieldNames.length; ++i) {
-          System.out.printf(Locale.ROOT, "%s=%s\n", this.fieldNames[i],
-              values[i]);
+        requireNonNull(fieldNames, "fieldNames");
+        for (int i = 0; i < fieldNames.length; ++i) {
+          System.out.printf(Locale.ROOT, "%s=%s\n", fieldNames[i], values[i]);
         }
         System.out.println();
       }
@@ -327,12 +333,12 @@ public class SplunkConnectionImpl implements SplunkConnection {
    * results from a Splunk REST call.
    *
    * <p>The element type is either {@code String} or {@code String[]}, depending
-   * on the value of {@code source}.</p> */
+   * on the value of {@code source}. */
   public static class SplunkResultEnumerator implements Enumerator<Object> {
     private final CSVReader csvReader;
-    private String[] fieldNames;
-    private int[] sources;
-    private Object current;
+    private String @Nullable [] fieldNames;
+    private int @Nullable [] sources;
+    private @Nullable Object current;
 
     /**
      * Where to find the singleton field, or whether to map. Values:
@@ -346,7 +352,8 @@ public class SplunkConnectionImpl implements SplunkConnection {
      */
     private int source;
 
-    public SplunkResultEnumerator(InputStream in, List<String> wantedFields) {
+    public SplunkResultEnumerator(InputStream in,
+        @Nullable List<String> wantedFields) {
       csvReader =
           new CSVReader(
               new BufferedReader(
@@ -359,6 +366,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
           // do nothing
         } else {
           final List<String> headerList = Arrays.asList(fieldNames);
+          requireNonNull(wantedFields, "wantedFields");
           if (wantedFields.size() == 1) {
             // Yields 0 or higher if wanted field exists.
             // Yields -1 if wanted field does not exist.
@@ -383,11 +391,11 @@ public class SplunkConnectionImpl implements SplunkConnection {
       }
     }
 
-    public Object current() {
+    @Override public Object current() {
       return current;
     }
 
-    public boolean moveNext() {
+    @Override public boolean moveNext() {
       try {
         String[] line;
         while ((line = csvReader.readNext()) != null) {
@@ -425,11 +433,11 @@ public class SplunkConnectionImpl implements SplunkConnection {
       return false;
     }
 
-    public void reset() {
+    @Override public void reset() {
       throw new UnsupportedOperationException();
     }
 
-    public void close() {
+    @Override public void close() {
       try {
         csvReader.close();
       } catch (IOException e) {
@@ -438,5 +446,3 @@ public class SplunkConnectionImpl implements SplunkConnection {
     }
   }
 }
-
-// End SplunkConnectionImpl.java
